--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6f663fa
+	base = b919502
 	trimbase = 
 	parent = release/indigo/multi_object_tracking_lidar
-	previous = 
+	previous = 6f663fa
