--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8ce6015
+	base = dd923c2
 	trimbase = 
 	parent = debian/indigo/multi_object_tracking_lidar
-	previous = 
+	previous = 8ce6015
