--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f53625f
+	base = 9f69a9c
 	trimbase = 
 	parent = rpm/indigo/multi_object_tracking_lidar
-	previous = 
+	previous = f53625f
