--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ad004c3
+	base = c3eba62
 	trimbase = 
 	parent = release/kinetic/multi_object_tracking_lidar
-	previous = 
+	previous = ad004c3
