--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 31cbbc3
+	base = 26de97b
 	trimbase = 
 	parent = debian/kinetic/multi_object_tracking_lidar
-	previous = 
+	previous = 31cbbc3
