--- a/tracks.yaml
+++ b/tracks.yaml
@@ -37,9 +37,10 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
     devel_branch: null
+    last_version: 1.0.0
     name: multiple-object-tracking-lidar
     patches: null
-    release_inc: -1
+    release_inc: '0'
     release_repo_url: null
     release_tag: v:{version}
     ros_distro: kinetic
