--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cc96d2f
+	base = bde2554
 	trimbase = 
 	parent = debian/melodic/multi_object_tracking_lidar
-	previous = 
+	previous = cc96d2f
