--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bbd97ce
+	base = 960505b
 	trimbase = 
 	parent = debian/melodic/multi_object_tracking_lidar
-	previous = 
+	previous = bbd97ce
