--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 62df42c
+	base = a769592
 	trimbase = 
 	parent = release/melodic/multi_object_tracking_lidar
-	previous = 
+	previous = 62df42c
