--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3685135
+	base = afe6672
 	trimbase = 
 	parent = rpm/melodic/multi_object_tracking_lidar
-	previous = 
+	previous = 3685135
