--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.0": ["Praveen Palanisamy", "praveen.palanisamy@outlook.com"]}
+{"1.0.1": ["Praveen Palanisamy", "praveen.palanisamy@outlook.com"], "1.0.0": ["Praveen Palanisamy", "praveen.palanisamy@outlook.com"]}
