--- a/tracks.yaml
+++ b/tracks.yaml
@@ -18,7 +18,7 @@ tracks:
     patches: null
     release_inc: '0'
     release_repo_url: null
-    release_tag: v:{version}
+    release_tag: ''':{version}'''
     ros_distro: indigo
     vcs_type: git
     vcs_uri: https://github.com/praveen-palanisamy/multiple-object-tracking-lidar.git
