--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.0-0": ["Sat Apr 13 2019", "Praveen Palanisamy", "praveen.palanisamy@outlook.com"]}
+{"1.0.1-1": ["Fri Apr 26 2019", "Praveen Palanisamy", "praveen.palanisamy@outlook.com"], "1.0.0-0": ["Sat Apr 13 2019", "Praveen Palanisamy", "praveen.palanisamy@outlook.com"]}
