--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/lunar/multi_object_tracking_lidar
-	previous = 
-	base = 3623cbd
+	previous = 3623cbd
+	base = 91d2f54
 	trim = 
 	trimbase = 
