--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/lunar/multi_object_tracking_lidar
-	previous = 
-	base = 80ef425
+	previous = 80ef425
+	base = 3cc569c
 	trim = 
 	trimbase = 
