--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/lunar/multi_object_tracking_lidar
-	previous = 
-	base = 83d8443
+	previous = 83d8443
+	base = 546eb08
 	trim = 
 	trimbase = 
