--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/multi_object_tracking_lidar
-	previous = 
-	base = f8a4f72
+	previous = f8a4f72
+	base = c725bba
 	trim = 
 	trimbase = 
