--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/multi_object_tracking_lidar
-	previous = 
-	base = 80810b0
+	previous = 80810b0
+	base = 0a4ada2
 	trim = 
 	trimbase = 
