--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/multi_object_tracking_lidar
-	previous = 
-	base = f04a7e4
+	previous = f04a7e4
+	base = 488de45
 	trim = 
 	trimbase = 
