--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/multi_object_tracking_lidar
-	previous = 
-	base = a0ed30d
+	previous = a0ed30d
+	base = e347eef
 	trim = 
 	trimbase = 
