--- a/tracks.yaml
+++ b/tracks.yaml
@@ -113,9 +113,11 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
     devel_branch: null
+    last_release: '''1.0.3'''
+    last_version: 1.0.3
     name: multiple-object-tracking-lidar
     patches: null
-    release_inc: 0
+    release_inc: '1'
     release_repo_url: null
     release_tag: ''':{version}'''
     ros_distro: noetic
