--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.3-1": ["Sun Jun 28 2020", "Praveen Palanisamy", "praveen.palanisamy@outlook.com"]}
+{"1.0.4-1": ["Sun Aug 29 2021", "Praveen Palanisamy", "praveen.palanisamy@outlook.com"], "1.0.3-1": ["Sun Jun 28 2020", "Praveen Palanisamy", "praveen.palanisamy@outlook.com"]}
